# cous-patcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: bundle.h  plist.h
src/: bundle.c  file_picker.mm  main.c  main.cpp  plist.c
ui/: app.slint
